adjusted some overflow issues

--- a/src/home/DarkBanner.module.css
+++ b/src/home/DarkBanner.module.css
@@ -62,7 +62,7 @@
     display: flex;
     flex-direction: column;
     background-color: #181818;
-    padding-bottom: 50px;
+    padding-bottom: 175px;
     padding-top: 25px;
   }
   .cakeContainer{
