--- a/src/main/DarkFooter.module.css
+++ b/src/main/DarkFooter.module.css
@@ -84,3 +84,14 @@
   height: 17px;
   width: 17px;
 }
+
+@media screen and (max-width:850px) {
+  .emailQueryField {
+    background-color: #ffffff57;
+    color: #ffffff;
+    height: 35px;
+    border-radius: 5px;
+    font-family: "Inter";
+    width:100%;
+  }
+}
